# WH1080WeatherStationDataUploader

./: README.md  config.toml  pyproject.toml
scripts/: clean.bat  clean.ps1  clean.sh  run.bat  run.ps1  run.sh
src/: app.py  cleaner.py  config.py  core.py  device.py  exceptions.py  logger.py  loggingConfigurer.py  main.py  report.py  reportSaver.py  reportUploader.py
